force-app/main/default/objects/Alliance_Lead__c/Alliance_Lead__c.object-meta.xml
<CustomObject>
    <label>Alliance Lead</label>
    <nameField>
        <label>Alliance Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alliance Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>