force-app/main/default/objects/Alliance_Lead__c/fields/Alliance_ATU__c.field-meta.xml
<CustomField>
    <fullName>Alliance_ATU__c</fullName>
    <label>Alliance Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>