force-app/main/default/objects/Alliance_Lead__c/fields/Alliance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Partner__c</fullName>
    <label>Alliance Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>