force-app/main/default/objects/Alliance_Lead__c/fields/Alliance_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rep_Email__c</fullName>
    <description>SF-295</description>
    <label>Alliance Rep Email</label>
    <type>Email</type>
</CustomField>