force-app/main/default/objects/Alliance_Lead__c/fields/Alliance_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rep_Name__c</fullName>
    <description>SF-295</description>
    <label>Alliance Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>