force-app/main/default/objects/Alliance_Lead__c/fields/Alliance_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rep_Phone__c</fullName>
    <description>SF-295</description>
    <label>Alliance Rep Phone</label>
    <type>Phone</type>
</CustomField>