force-app/main/default/objects/Alliance_Lead__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Alliance Leads</relationshipLabel>
    <relationshipName>Alliance_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>