force-app/main/default/objects/Alliance_Lead__c/fields/Current_Alliance_Customer__c.field-meta.xml
<CustomField>
    <fullName>Current_Alliance_Customer__c</fullName>
    <label>Current Alliance Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>