force-app/main/default/objects/Alliance_Lead__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>