force-app/main/default/objects/Alliance_Lead__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <description>Jira - SF-195</description>
    <label>Customer Email</label>
    <type>Email</type>
</CustomField>