force-app/main/default/objects/Alliance_Lead__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <description>Jira - SF-195</description>
    <label>Customer Phone</label>
    <type>Phone</type>
</CustomField>