force-app/main/default/objects/Alliance_Lead__c/fields/Date_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Date_Mapped__c</fullName>
    <label>Date Mapped</label>
    <type>Date</type>
</CustomField>