force-app/main/default/objects/Alliance_Lead__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIL</fullName>
            </value>
            <value>
                <fullName>JIL</fullName>
            </value>
            <value>
                <fullName>RIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>