force-app/main/default/objects/Alliance_Lead__c/fields/Rubrik_AE__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubrik AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alliance_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>