force-app/main/default/objects/Alliance_Lead__c/fields/Rubrik_BDM__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rubrik BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Alliance_Lead1</relationshipName>
    <type>Lookup</type>
</CustomField>