force-app/main/default/objects/Alliance_Lead__c/fields/Rubrik_Region__c.field-meta.xml
<CustomField>
    <fullName>Rubrik_Region__c</fullName>
    <label>Rubrik Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>