force-app/main/default/objects/Alliance_Lead__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Jira SF-195</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>