force-app/main/default/objects/Alliance_Lead__c/validationRules/Restrict_users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_users</fullName>
    <active>true</active>
    <description>Restrict Users from editing record when it is converted</description>
    <errorConditionFormula>AND(
   NOT(ISNEW()),
   PRIORVALUE( isConverted__c ) = TRUE
)</errorConditionFormula>
    <errorMessage>Cannot edit the record once it is converted</errorMessage>
</ValidationRule>